# mindblast

./: .firebaserc  .gitignore  AGENTS.md  README.md  firebase.json  firestore.indexes.json  firestore.rules  pyproject.toml
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS
docs/: BACKEND_SERVICE_DESIGN.md  CONTENT_COMPLIANCE_POLICY.md  DOMAIN_PREPURCHASE_CHECKLIST.md  ENVIRONMENTS.md  FUTURE_FEATURES.md  HOSTING_ROLLOUT.md  PHASE1.md  PHASE10.md  PHASE1_5.md  PHASE2.md  PHASE3.md  PHASE4.md  PHASE5.md  PHASE5_2.md  PHASE5_5.md  PHASE6.md  PHASE6_5.md  PHASE7.md  PHASE7_5.md  PHASE8.md  PHASE9.md  QUIZ_APP_MARKET_RESEARCH.md  QUIZ_CONTENT_SOURCES.md  QUIZ_FORGE_DESIGN.md
quizzes/: 01a9175a-0c23-5376-adee-c3bc5d421424.json  0463a8ba-4e58-597c-ad75-b8706c13200b.json  06a44fc9-2a2c-5fde-a49f-be92031ef9b0.json  0bdebc95-9553-5293-a441-5abe8b269ba2.json  105a2ad2-2d37-59df-81f9-666ddb3b48cc.json  137b933b-c96b-5794-b985-4e60a04f1b8d.json  14547764-d2ce-5804-863b-3d337b7238e3.json  17a9abbc-d1c6-5c56-a432-410312d39bde.json  19677ab7-2c43-5342-874b-f40daa0dcc14.json  1a3a2440-624b-50f2-83f2-b622ee8f2e20.json  1afc27fe-d294-5c4e-a8b3-ed422db7e2f6.json  1e8a1327-d930-540d-badc-eeadee38d544.json  1eea4c93-f2a4-5b9b-ba4d-d8b10df9f527.json  20777fb9-7347-569d-95c3-8e72568b2d71.json  23a13cb0-49ae-594b-b85b-fe17817dbd33.json  29b794fc-98a4-5c43-9135-2b2ea2a6d0ee.json  29d4d37c-5c06-54fc-b4f8-6f25adb519f0.json  2e599c62-ca38-55e7-9321-d8add3bb256b.json  2f64b96e-8514-5fd9-8e5f-91825476c6f8.json  33f92f3f-ec48-5ba6-b66f-17569a57c41c.json  (+47 more)
scripts/: feedback-serviceaccount.sh  (+3 more)
(+171 files in other folders)
